# teenyml

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  README.md
inc/: teenyml.h  teenyml_dimsgen_priv.h  teenyml_itergen_priv.h  teenyml_macromagic_priv.h  teenyml_ops_priv.h  teenyml_tensorgen_priv.h
src/: teenyml.c  testmain.c
